@@ -86,6 +86,7 @@
         and linking to source code locations). [b4]
       - :downloads now opens a download list in the multi-line output
         buffer. [b6]
+      - :javascript! now opens a Read Eval Print Loop. [b6]
       - Added -arg flag to :map. [b6]
       - :extensions has been replaced with a more powerful :addons.
       - Added -literal flag to :command. [b6]
